Fixed long notebooks in review tables that don't wrap

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -2899,7 +2899,7 @@ body.page-code_cells-id {
     clear: both;
     display: inline;
     margin-bottom: .05em;
-    word-break: break-work;
+    word-break: break-word;
 }
 .revisions-column {
     min-width: 110px;
@@ -2918,10 +2918,6 @@ body.page-reviews {
         top: -.1em;
     }
 }
-table.review-table img.tagLogoLock {
-    position: relative;
-    top: -.15rem;
-}
 body.page-reviews i.fa.fa-clock-o {
     color: $darker-icon-color;
 }
@@ -2936,9 +2932,20 @@ table.review-table {
     tbody th a {
         margin-left: .2em;
     }
-    td:first-child {
+    img.tagLogoLock {
+        position: relative;
+        top: -.15rem;
+    }
+    tr th:first-child,
+    tr td:first-child {
         font-size: 110%;
         max-width: 600px;
+        @media all and (max-width: 800px) {
+            max-width: 50%;
+        }
+    }
+    tr td:first-child a {
+        word-break: break-word;
     }
     td:last-child {
         max-width: 400px;
